--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,14 @@
 body {
     padding: 20px;
   }
-  button {
+  /* button {
     margin-top: 20px;
     line-height: 60px;
     font-weight: bold;
     padding: 0 40px;
     background: salmon;
     border: none;
-  }
+  } */
   button:hover {
     background: lightsalmon;
   }
