--- a/src/style.css
+++ b/src/style.css
@@ -17,16 +17,5 @@
 }
 .myCanvas{
   z-index: -1;
+  position: absolute;
 }
-/* button {
-  margin-top: 20px;
-  line-height: 60px;
-  font-weight: bold;
-  padding: 0 40px;
-  background: salmon;
-  border: none;
-} */
-button:hover {
-    background: lightsalmon;
-}
-
